--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,6 @@
 <% @posts.each do |post| %>
-  <%= render :partial => "post", locals: {:post => post} %>
+  <%# <%= render :partial => "post", locals: {:post => post} %1> %>
+  <%# <%= render :partial => "post", :collection => @posts %1> %>
+  <%# <%= render @posts %1> %>
+  <%= render(@posts) || "There are no blog posts!" %>
 <% end %>
