--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
-<% @posts.each do |post| %>
+<%# <% @posts.each do |post| %1> %>
   <%# <%= render :partial => "post", locals: {:post => post} %1> %>
   <%# <%= render :partial => "post", :collection => @posts %1> %>
   <%# <%= render @posts %1> %>
   <%= render(@posts) || "There are no blog posts!" %>
-<% end %>
+<%# <% end %1> %>
